--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta charset="UTF-8">
     <title>Pomodoro counter</title>
 </head>
+//title
 <body>
+<div style="display: inline-block;" >
 <div class="myDiv"><h1>pomodoro counter!</h1></div>
 <inst>
-    <h2>Please enter the following</h2>
+    <h2>Please enter the following:</h2>
     <p>
         <label for="Workhour">Working Time (In hours):</label>
         <input type="number" id="Workhour" name="Workhour" min="1"><br><br>
@@ -36,6 +38,16 @@
 <div id="quack" hidden="hidden">Time left = <span id="timer"></span></div>
 
 <div><span id="clock"></span></div>
+</div>
+<div style="float: right; width: 35%;" id="goalz">
+<h3>Goals!</h3><p id="dis">Click "Add Goal" to add a goal to the list:</p>
+<p>
+    <input type="Text" id="Goals" name="Goals">
+    <input type="button" onclick="myFunction()" value="Add goal">
+</p>
+
+<ul id="myGoals"></ul>
+</div>
 
 </body>
 </html>
